# voice-amplifier

./: .gitignore  404.html  Makefile  README.md  generate.py  index.html  mirror.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: blank.yml  refresh.yml  update-data.yml
docs/people/: adam-lucansky.md  adrian-repcok.md  alex-szitas.md  alexander-riabov.md  andrej-danko.md  andrej-palko.md  anna-belousovova.md  anton-hrnko.md  artur-bekmatov.md  bohus-garbar.md  boris-koroni.md  boris-micuda.md  boris-susko.md  branislav-rusinak.md  dag-danis.md  daniel-bombic.md  daniel-slobodan-macovsky.md  dusan-gazdura.md  dusan-jariabek.md  dusan-viglassky.md  eduard-chmelar.md  erik-kalinak.md  filip-sulik.md  frantisek-bubak.md  frantisek-horvath.md  frantisek-skvrnda.md  gustav-murin.md  gy-rgy-gyimesi.md  igor-melicher.md  ivan-sevcik.md  jalal-suleiman.md  jan-baranek.md  jan-carnogursky.md  jan-figel.md  jan-kubis.md  jan-mazgut.md  jan-richter.md  jan-rohar.md  jan-simonics.md  jan-stanko.md  (+99 more)
hlasyagresora.eu/: kategorie.json  osoby.json
people/adam-lucansky/: index.html
people/adrian-repcok/: index.html
people/alex-szitas/: index.html
people/alexander-riabov/: index.html
people/andrej-danko/: index.html
people/andrej-palko/: index.html
people/anna-belousovova/: index.html
people/anton-hrnko/: index.html
people/artur-bekmatov/: index.html
people/bohus-garbar/: index.html
people/boris-koroni/: index.html
people/boris-micuda/: index.html
people/boris-susko/: index.html
search/: search_index.json
templates/: person.md.j2
(+126 files in other folders)
