[project]
name = "voice-amplifier"
version = "0.1.0"
description = "Generate MkDocs pages from JSON using Jinja templates"
requires-python = ">=3.14"

dependencies = [
"jinja2",
"mkdocs",
"mkdocs-material",
"mkdocs-awesome-pages-plugin",
"mkdocs-callouts",
"mkdocs-include-markdown-plugin",
"mkdocs-material",
"mkdocs-video",
"mkdocs-mermaid2-plugin",
"mkdocs-revealjs",
"mkdocs-blog-plugin",
"mkdocs-rss-plugin",
"mkdocs-redirects",
"mkdocs-macros-plugin",
"mkdocs-minify-plugin",
"pymdown-extensions",
]

[project.optional-dependencies]
dev = [
"ruff",
"mypy",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
"E",
"F",
"I",
"UP",
"B",
]

[tool.mypy]
python_version = "3.14"
strict = true

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

